# versioning

./: generate_toml.py  pyproject.toml
scripts/: setup_env.sh
