[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crimson-templator-requirements"
version = "0.1.0"
description = "requirements file templates."
readme = "README.md"
authors = [
  { name="Sisung Kim", email="sisung.kim1@gmail.com" },
]

classifiers = [
    "Development Status :: Beta",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",

    "Intended Audience :: Developers",

    "Topic :: Software Development :: Libraries :: Python Modules",
    
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",

    "Typing :: Typed",

]
dependencies = [
    pydantic,
    
]
requires-python = ">=3.9"

[project.urls]
"Homepage" = "https://github.com/crimson206/requirements"
"Bug Tracker" = "https://github.com/crimson206/requirements/issues"
